action_dir = join_paths('hicolor', 'scalable', 'actions')
action_icons = [
    'gearlever-check-plain-symbolic.svg',
    'gearlever-cmd-args-symbolic.svg',
    'gearlever-computer-symbolic.svg',
    'gearlever-document-drop-symbolic.svg',
    'gearlever-file-manager-symbolic.svg',
    'gearlever-terminal-symbolic.svg',
    'gl-application-x-executable-symbolic.svg',
    'gl-arrow2-top-right-symbolic.svg',
    'gl-earth-symbolic.svg',
    'gl-funnel-outline-symbolic.svg',
    'gl-hash-symbolic.svg',
    'gl-info-symbolic.svg',
    'gl-left-symbolic.svg',
    'gl-lightbulb-symbolic.svg',
    'gl-menu-symbolic.svg',
    'gl-plus-symbolic.svg',
    'gl-refresh-symbolic.svg',
    'gl-right-symbolic.svg',
    'gl-software-update-available-symbolic.svg',
    'gl-star-large-symbolic.svg',
    'gl-user-trash-symbolic.svg'
]
install_data(action_icons, 
    install_dir: join_paths(get_option('datadir'), 'icons', action_dir) 
)